Update bonus work

--- a/EmployeeSQL/Bonus.ipynb
+++ b/EmployeeSQL/Bonus.ipynb
@@ -47,24 +47,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "0f2ff4f6-777a-4488-ae21-630ddb7a22b3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "emp_id        0\n",
-       "title_id      0\n",
-       "birth_date    0\n",
-       "first_name    0\n",
-       "last_name     0\n",
-       "sex           0\n",
-       "hire_date     0\n",
+       "title_id    0\n",
+       "title       0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,9 +70,15 @@
     "null_check = employees_df.notnull()\n",
     "null_check\n",
     "\n",
-    "employees_df.isna().sum()\n",
-    "employees_df.isnull().sum()"
+    "titles_df.isna().sum()\n",
+    "titles_df.isnull().sum()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e3dab5d-eb3f-4e83-b76e-29d8b5887361",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -92,21 +93,12 @@
    "execution_count": 5,
    "id": "4ab4432d-4575-4e77-bea8-1c0d8546effb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-5-d15ec458a2ab>:4: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will*not* be treated as literal strings when regex=True.\n",
-      "  salaries_df[\"salary\"] = salaries_df[\"salary\"].str.replace('$', '')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Convert \"money\" into a readable number\n",
     "\n",
-    "salaries_df[\"salary\"] = salaries_df[\"salary\"].str.replace(',', '')\n",
-    "salaries_df[\"salary\"] = salaries_df[\"salary\"].str.replace('$', '')\n",
+    "salaries_df[\"salary\"] = salaries_df[\"salary\"].str.replace(',', '', regex=True)\n",
+    "salaries_df[\"salary\"] = salaries_df[\"salary\"].str.replace('$', '', regex=True)\n",
     "salaries_df[\"salary\"] = salaries_df[\"salary\"].astype('float')"
    ]
   },
